RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Session__c/AI_Conversation_Session__c.object-meta.xml
<CustomObject>
    <description>Parent object for AI conversation sessions to improve scalability and performance</description>
    <label>AI Conversation Session</label>
    <nameField>
        <displayFormat>CONV-{0000000}</displayFormat>
        <label>Conversation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Conversation Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>