RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Session__c/fields/AI_Provider__c.field-meta.xml
<CustomField>
    <fullName>AI_Provider__c</fullName>
    <description>AI Provider used for this conversation</description>
    <label>AI Provider</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>