RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Session__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Related Case record</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AI Conversation Sessions</relationshipLabel>
    <relationshipName>AI_Conversation_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>