RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Session__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>When the conversation session ended</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>