RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Session__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>When the conversation session started</description>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>