RouteLogic-v4.0.0/force-app/main/default/objects/AI_Conversation_Session__c/fields/Total_Messages__c.field-meta.xml
<CustomField>
    <fullName>Total_Messages__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of messages in this conversation</description>
    <label>Total Messages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>